--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,6 +27,13 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+
+.navbar{
+    background-color: blue;
+}
+/* .container-fluid{
+    background-color: blue;
+} */
 .header_logo {
     width: 110px;
 }
@@ -57,7 +64,6 @@ header {
 .header_lista :hover {
     transform: scale(1.2);
 }
-
 
 .main_titulo {
     text-align: center;
@@ -100,7 +106,13 @@ header {
 .historia_texto {
     font-family: var(--fuente);
 }
-
+.carousel-inner{
+    width: 70vw;
+    display: flex;
+}
+.imagen_carousel{
+    justify-content: center;
+}
 .noticia1_titulo {
     font-family: var(--fuentetitulo);
 }
@@ -253,6 +265,8 @@ header {
     width: 100%;
     height: 100%;
     display: grid;
+    justify-items: center;
+    align-items: center;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 0px 0px;
@@ -260,17 +274,20 @@ header {
     align-items: baseline;
     grid-template-areas:
         "articulo1 articulo2"
-        "articulo3 articulo4"
+        "articulo3 articulo4";
+    
 }
 
 .articulo1 {
     grid-area: articulo1;
     width: 40vw;
+    /* height: 40vh; */
 }
 
 .articulo2 {
     grid-area: articulo2;
     width: 40vw;
+    /* height: 40vh; */
 }
 
 .articulo3 {
@@ -392,9 +409,8 @@ footer {
 .footer_redes li {
     list-style: none;
     color: white;
-    padding: 5px;
     margin: 10px;
-    font-size: 20px;
+    font-size: 1rem;
     font-family: var(--fuente);
 
 }
@@ -416,10 +432,6 @@ footer {
     height: 250px;
 
 }
-
-/* .footer_redes :hover {
-    font-size: 23px;
-} */
 
 .footer_autor {
     display: flex;
@@ -567,6 +579,7 @@ footer {
         display: flex;
         flex-direction: column;
         align-content: center;
+        background-color: white;
     }
 
     .header_logo {
@@ -593,6 +606,16 @@ footer {
         display: flex;
         justify-content: center;
     }
+
+.container-fluid{
+    background-color: white;
+    margin: 2rem;
+}
+
+.container-fluid h3{
+    font-size: 28px;
+    align-items: flex-start;
+}
 
     .main_texto{
         margin: 1rem;
@@ -641,7 +664,7 @@ footer {
         grid-template-rows: 1fr 1fr 1fr 1fr;
         gap: 0px 0px;
         grid-auto-flow: row;
-        margin: 0;
+        margin: 2rem;
         align-items: center;
         width: 100%;
         /* justify-content: center; */
@@ -654,37 +677,51 @@ footer {
 
     .articulo1 {
         grid-area: articulo1;
-        width: 40%;
+        width: 80vw;
+        justify-items: center;
     }
 
     .articulo2 {
         grid-area: articulo2;
-        width: 40%;
+        width: 80vw
     }
 
     .articulo3 {
         grid-area: articulo3;
-        width: 40%;
+        width: 80vw;
     }
 
     .articulo4 {
         grid-area: articulo4;
-        width: 40%;
+        width: 80vw;
     }
 
     .articulo1_imagen{
         width: auto;
     }
-    .footer_lista{
-        font-size: 10px;
+
+    footer{
+        display: flex;
+        align-items: center;
     }
+    /* .footer_lista{
+        margin: 1rem;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        font-size: 10px;
+    } */
     .footer_maps iframe {
-        width: 100px;
-        height: 105px;
+        width: 200px;
+        height: 120px;
 
     }
     .disabled{
         display: block;
         visibility: visible;
+    }
+    .active{
+        display: none;
+        visibility: hidden;
     }
 }
